# qec-util

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_all.txt  requirements_dev.txt
.github/workflows/: actions.yaml
qec_util/: __init__.py
qec_util/circuits/: __init__.py  circuits.py
qec_util/data_processing/: __init__.py  pij_matrix.py  syndrome.py
qec_util/dem_instrs/: __init__.py  dem_instrs.py  hyperedge_decomposition.py  util.py
qec_util/dems/: __init__.py  dems.py  hyperedge_decomposition.py  util.py
qec_util/distance/: __init__.py  distance.py
qec_util/layouts/: layout.py  library.py  plotter.py  util.py
qec_util/mod2/: __init__.py  util.py
qec_util/performance/: __init__.py  metrics.py  plots.py  sampler.py  samplers.py  util.py
qec_util/samplers/: __init__.py  samplers.py
qec_util/threshold/: __init__.py  estimation.py  plot.py  util.py
qec_util/util/: analysis.py
tests/: conftest.py  test_tests.py
tests/circuits/: test_circuits.py
tests/data_processing/: test_pij_matrix.py  test_syndrome.py
tests/dem_instrs/: test_dem_instrs.py  test_hyperedge_decomposition.py
tests/dems/: test_dems.py  test_hyperedge_decomposition.py
tests/distance/: test_distance.py
tests/layouts/: test_plotter.py
tests/mod2/: test_util.py
tests/performance/: test_metrics.py  test_plots.py  test_sampler.py  test_samplers.py  test_util.py
tests/samplers/: test_samplers.py
tests/threshold/: test_estimation.py  test_plot.py
tests/util/: test_analysis.py  test_syndrome.py
