[tool.poetry]
name = "qec-util"
version = "0.1.0"
description = "A utility package for Quantum Error Correction experiments"
authors = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
maintainers = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/BorisVarbanov/qec-util"
repository = "https://github.com/BorisVarbanov/qec-util"
keywords = ["quantum", "error correction"]
packages = [{include = "qec_util"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
xarray = "^0.21"
matplotlib = "^3.6.3"
networkx = "^3.0"
pyyaml = "^6.0"
numpy = ">=1.19, <1.25"
lmfit = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^22.12.6"
flake8-import-order = "^0.18.2"
mypy = "^0.991"
typeguard = "^2.13.3"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.20.1"
xdoctest = "^1.1.0"
darglint = "^1.8.1"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
